gitops/apps/security/base/security-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    environment: production
    team: security
    cost-center: security
