gitops/apps/security/base/kyverno-install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno
  namespace: kyverno
  labels:
    app.kubernetes.io/name: kyverno
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kyverno
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kyverno
    spec:
      serviceAccountName: kyverno
      containers:
        - name: kyverno
          image: ghcr.io/kyverno/kyverno:v1.11.5
          args:
            - --webhooktimeout=15
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 9443
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 9443
            initialDelaySeconds: 10
            periodSeconds: 10
